2006-07-21  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/olive.glade: some UI refreshment (push, remove and commit dialog)
    * olive/frontend/gtk/push.py: implemented 'push' functionality
    * olive/frontend/gtk/commit.py: implemented 'commit' functionality
    * olive/frontend/gtk/remove.py: implemented 'remove' functionality
    * olive/frontend/gtk/add.py: implemented 'add' functionality
    * olive/frontend/gtk/handler.py: implemented 'init' functionality
    * olive/backend/fileops.py: added recursive mode to add(), added
      NotBranchError exception to add() and remove()

2006-07-20  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/__init__.py: implemented OliveCommunication.refresh_right()
    * olive/frontend/gtk/handler.py: implemented browsing in the file list
    * olive/backend/fileops.py: tweaked status() (to get proper status in fact)

2006-07-19  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/__init__.py: added folder and file icons

2006-07-18  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/backend/init.py: added NotBranchError handling to branch()
    * olive/frontend/gtk/__init__.py: added OliveCommunication class
    * olive/frontend/gtk/branch.py: finished implementation of Branch window

2006-07-17  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive.glade: signals added + Branch dialog modifications
    * olive/frontend/gtk/branch.py: began to implement branching functionality
    * olive/frontend/gtk/*: fixes tabs and spaces
    * olive/frontend/gtk/dialog.py: some basic dialog stuff added
    * olive/frontend/gtk/handler.py: moved dialog stuff into dialog.py
    * olive/frontend/gtk/__init__.py: added Status column to filelist
    * olive/backend/fileops.py: implemented status()
    * TODO: added a TODO list
    * setup.py: some tweaks
    * olive-gtk: added main executable